debit and locking with migrations and apis along with swagger integration
